Entrega clase 4 agrego icono de carrito y lista de procutos

--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@ h2{
 }
 
 
-.probandologo{
-  margin-bottom: 50px !important;
+.imagenCarrito img{
+  width: 40px !important;
+  height: 40px !important;
 }
